--- a/css/main.css
+++ b/css/main.css
@@ -94,50 +94,78 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
-
 html {
-  background-color: #040404;
+  background-color: #222;
   height: 100%;
   Width: 100%;
 }
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 700;
-  padding: 2em;
+  padding: 0em 2em;
   font-size: 1.25em;
-  height: 100%;
+  color: #fff;
+  display: flex;
+  justify-content: center;
 }
 
 .wrapper {
-  display: flex;
-  flex-flow: row-wrap;
+  display: flex;  
+  flex-flow: row wrap;
   justify-content: space-between;
-  font-weight: 700;
+  max-width: 1200px;
+}
+.wrapper span {
+    font-family: 'Montserrat', sans-serif;;
+    font-weight: 700;
+}
+
+header,
+main,
+footer {
+    background-color: #222;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+}
+
+header h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2em;
+}
+main {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid #fff;
+}
+Main p {
+    font-size: 1.25em;
 }
 
 .div-1, .div-2, .div-3 {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #fff;
   line-height: 1.5em;
-  font-size: 1.4em;
-  background-color: #040404;
-  height: auto;
-  border-right: #cc0505 solid 3px;
-  padding-left: 15px;
-}
-.wrapper span {
-    font-family: 'Montserrat', sans-serif;;
-    font-size: 1.5em;
-    font-weight: 700;
-    text-transform: lowercase;
-    text-decoration: underline;
+  font-size: 1em;
+  width: 33%;
+  height: 200px;
+  border-bottom: 1px solid #555;
+  padding: 0 0 0 2px;
 }
 
+footer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-top: 1px solid #fff
+}
 
+footer ul li a {
+    padding: 30px 20px 0 0;
+    text-decoration: none;
+}
 
 /* ==========================================================================
    Helper classes
